--- a/google实践框架/google_1.ipynb
+++ b/google实践框架/google_1.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +243,65 @@
    ],
    "source": [
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "with sess.as_default():\n",
+    "    print(result.eval())  #通过tf.Tensor.eval函数来计算一个张量的取值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 5.]\n",
+      "[3. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "\n",
+    "print(sess.run(result))\n",
+    "print(result.eval(session=sess))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.InteractiveSession()  #直接构建默认会话的函数\n",
+    "print(result.eval())\n",
+    "sess.close()"
    ]
   },
   {
